# poisson-nufft

./: Practical_Project.ipynb.ipynb  Practical_Projects_NUFFT_Poisson_ERI_scipy.ipynb  eri_benchmark.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: Practical_Project.ipynb-checkpoint.ipynb  Practical_Projects_NUFFT_Poisson_ERI-checkpoint.ipynb  Practical_Projects_NUFFT_Poisson_ERI_fix-checkpoint.ipynb  Practical_Projects_NUFFT_Poisson_ERI_scipy-checkpoint.ipynb  Untitled-checkpoint.ipynb  eri_benchmark-checkpoint.ipynb
Report/: references.bib  references.bib.blg  references.blg  report.aux  report.bbl  report.bcf  report.blg  report.out  report.run.xml  report.tex  report.toc  style.sty
